docs/cover.css
/*
 * Globals
 */

/* Links */
a,
a:focus,
a:hover {
  color: #fff;
}

/* Custom default button */
.btn-secondary {
  color: #333;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #fff;
  border: .05rem solid #fff;
}

.btn-secondary:hover,
.btn-secondary:focus {
  color:#fff;
  text-shadow: none; /* Prevent inheritance from `body` */
  background-color: #333;
  border: .05rem solid #fff;
}

/*
 * Base structure
 */

html,
body {
  height: 100%;
  background-color: #333;
}

body {
  display: -ms-flexbox;
  display: flex;
  color: #fff;
  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
  /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
  overflow: auto; */
}

#wrapper {
  /* position: absolute;
  width: 100%;
  height: 100%; */
  /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
  /* overflow: auto; */
}

.cover-container {
  max-width: 42em;
}


/*
 * Header
 */
.masthead {
  margin-bottom: 2rem;
}

.masthead-brand {
  margin-bottom: 0;
}

.nav-masthead .nav-link {
  padding: .25rem 0;
  font-weight: 700;
  color: rgba(255, 255, 255, .5);
  background-color: transparent;
  border-bottom: .25rem solid transparent;
}

.nav-masthead .nav-link:hover,
.nav-masthead .nav-link:focus {
  border-bottom-color: rgba(255, 255, 255, .25);
}

.nav-masthead .nav-link + .nav-link {
  margin-left: 1rem;
}

.nav-masthead .active {
  color: #fff;
  border-bottom-color: #fff;
}

@media (min-width: 48em) {
  .masthead-brand {
    float: left;
  }
  .nav-masthead {
    float: right;
  }
}

@media (max-width: 48em) {
  .lead {
    font-size: 100%;
    text-align: left;
  }
}


/*
 * Cover
 */
.cover {
  padding: 0 1.5rem;
}
.cover .btn-lg {
  padding: .75rem 1.25rem;
  font-weight: 700;
}


/*
 * Footer
 */
.mastfoot {
  color: rgba(255, 255, 255, .5);
}

/*
 * Additional elements
 */
hr {
  border-color: white;
  width: 50%;
}

#invisible {
  visibility: hidden;
};

/*
* Mailchimp form
*/
#mc_embed_signup{
  /* background:#fff; */
  clear:left;
  /* font:14px Helvetica,Arial,sans-serif; */
}

#mc-embedded-subscribe-form input[type=email]{
  display: inline;
  width: 100%;
  font-size: 150%;
}

#mc-embedded-subscribe-form input[type=checkbox]{
  display: inline;
  width: auto;
  margin-right: 10px;
}

#mergeRow-gdpr {
  margin-top: 20px;
}

#mergeRow-gdpr fieldset label {
  font-weight: normal;
}

#mc-embedded-subscribe-form .mc_fieldset{
  border:none;
  min-height: 0px;
  padding-bottom:0px;
}

